2001-02-21 Thomas Hepper <thqant.han.de>
	* changer-src/scsi-changer-driver.c: Do an Test Unit Ready
	  before sending SCSI commands in GenericRewind
	* changer-src/chg-scsi.c: Fixed an type in the debug print
	  of the config file

2001-02-09 John R. Jackson <jrj@purdue.edu>

	* server-src/diskfile.c: Fix core dump in test program.

2001-02-04 John R. Jackson <jrj@purdue.edu>

	* man/amanda.8.in: Fix mailto to space separated, not comma.

2001-02-03 John R. Jackson <jrj@purdue.edu>

	* client-src/Makefile.am: Add CLEANFILES rule to remove *.test.c.
	* common-src/Makefile.am: Add more sources as needed to the test
	  programs so they would compile.
	* server-src/Makefile.am: Create TEST_PROGS make variable ala the
	  other Makefile.am files.
	* tape-src/Makefile.am: Add CLEANFILES rule to remove *.test.c.

2001-02-03 John R. Jackson <jrj@purdue.edu>

	* .cvsignore: Add entries to keep CVS quiet.
	* */.cvsignore: Ditto.

2001-02-02 John R. Jackson <jrj@purdue.edu>

	* server-src/reporter.c: Fix problem with enum being unsigned on
	  some systems.

2001-01-26 John R. Jackson <jrj@purdue.edu>

	* changer-src/Makefile.am: Double up the references to libamanda to
	  handle systems that put regex in strange places.
	* client-src/Makefile.am: Ditto.
	* recover-src/Makefile.am: Ditto.
	* restore-src/Makefile.am: Ditto.
	* server-src/Makefile.am: Ditto.
	* tape-src/Makefile.am: Ditto.

2001-01-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* Amanda 2.4.2p1 released
	
2001-01-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driverio.h (sched_t): new field no_space.
	* server-src/driver.c (start_some_dumps): don't start a disk if
	  no_space is set.
	* server-src/driver.c (continue_dumps): set no_space if it's the
	  only active dumpers, case c.
	* server-src/driver.c (read_schedule): set no_space to 0.

2001-01-23 John R. Jackson <jrj@purdue.edu>

	* configure.in: Test for setmntent.